# gemma4.kt

./: .gitignore  .gitmodules  Gemma4.java  Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/com/llama4j/: Gemma4.kt  Options.kt
cli/: build.gradle.kts
cli/src/main/kotlin/com/llama4j/cli/: Gemma4.kt  Options.kt
gradle/: libs.versions.toml
lib/: build.gradle.kts
lib/ggml-bridge/: CMakeLists.txt  ggml_bridge.c  ggml_bridge.h
lib/src/jvmMain/kotlin/io/github/lbenedetto/: module-info.java
lib/src/main/java/: module-info.java
lib/src/main/java/com/llama4j/: AOT.java  ArrayFloatTensor.java  BF16FloatTensor.java  CategoricalSampler.java  F16FloatTensor.java  F32FloatTensor.java  Float16.java  FloatTensor.java  GGMLTensorEntry.java  GGMLType.java  GGUF.java  Gemma4.java  Gemma4.kt  GemmaChatFormat.java  GemmaTokenizer.java  Llama.java  MXFP4FloatTensor.java  ModelLoader.java  Options.java  Options.kt  Pair.java  Parallel.java  Q4_0FloatTensor.java  Q4_1FloatTensor.java  Q4_KFloatTensor.java  Q5_1FloatTensor.java  Q5_KFloatTensor.java  Q6_KFloatTensor.java  Q8_0FloatTensor.java  RoPE.java  Sampler.java  ToppSampler.java  Vocabulary.java  package-info.kt
lib/src/main/java/com/llama4j/floattensor/: AggregateFunction.kt  ArrayFloatTensor.java  ArrayFloatTensor.kt  BF16FloatTensor.java  BF16FloatTensor.kt  F16FloatTensor.java  F16FloatTensor.kt  F32FloatTensor.java  (+29 more)
lib/src/main/kotlin/com/llama4j/: Config.kt  Gemma4.kt  Options.kt
lib/src/nativeInterop/cinterop/: ggml.def  llama.def
(+349 files in other folders)
